Ensure overflow-y is set to scroll for body element

--- a/src/scss/layout/_base.scss
+++ b/src/scss/layout/_base.scss
@@ -14,6 +14,7 @@ body {
   min-width: $min-viewport-width;
   min-height: $min-viewport-height;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .wrapper {
